fixed some spacing issues on the about page

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,5 @@
 
+/*---CSS for about.html, recipe.html and contact.html--*/
 
 body {
     padding-top: 100px;
@@ -106,10 +107,12 @@ section {
     font-size: 50px;
     text-align: center;
     margin: 0.25em 0;
+    margin-bottom: 30px;
     
 }
 #about p {
     text-align: center;
+    margin-bottom: 30px;
 }
 #about {
      background: url("../images/lettuce.jpg");
@@ -122,7 +125,7 @@ section {
 
 #about-text {
     background-color: #fafafa;
-    width:80%;
+    width:100%;
   
 }
 
@@ -135,7 +138,14 @@ section {
     color:#463e2e;
     line-height: 30px ;
 }
-
+@media only screen and (max-width: 800px) {
+  .about-section {
+    font-size: 12px;
+  }
+  #about-text h1 {
+      font-size: 30px;
+  }
+}
 #carouselExampleIndicators {
     margin-top: 100px;
     width: 80%;
